--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-     "server": "cd server && npm run dev",
+    "server": "cd server && npm run dev",
     "start": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
     "@types/simple-peer": "^9.11.8",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "fastify": "^4.28.1",
+    "fastify-cors": "^6.0.3",
+    "fastify-socket.io": "^5.1.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.14"
@@ -26,6 +31,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "concurrently": "^9.1.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
