--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
@@ -19,6 +18,8 @@
     "@types/node": "^22.9.0",
     "@types/simple-peer": "^9.11.8",
     "fastify": "^5.1.0",
+    "fastify-cors": "^6.0.3",
+    "fastify-socket.io": "^5.1.0",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.8.1",
     "ts-node-dev": "^2.0.0",
