--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "start": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
+    "@mui/icons-material": "^6.4.3",
+    "@mui/material": "^6.4.3",
+    "@mui/styled-engine-sc": "^6.4.3",
     "@types/simple-peer": "^9.11.8",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
@@ -24,6 +30,7 @@
     "react-router-dom": "^6.28.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.14",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
