--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
     "@mui/styled-engine-sc": "^6.4.3",
+    "@mui/system": "^6.4.3",
     "@types/simple-peer": "^9.11.8",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
@@ -37,6 +38,7 @@
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "concurrently": "^9.1.0",
     "eslint": "^9.14.0",
