--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,17 @@
   "description": "",
   "dependencies": {
     "@fastify/cors": "^10.0.1",
+    "@fastify/postgres": "^6.0.2",
     "@fastify/websocket": "^11.0.1",
     "@types/node": "^22.9.0",
+    "@types/pg": "^8.11.11",
     "@types/simple-peer": "^9.11.8",
     "cors": "^2.8.5",
+    "drizzle-orm": "^0.39.3",
     "fastify": "^5.1.0",
     "fastify-cors": "^6.0.3",
     "fastify-socket.io": "^5.1.0",
+    "pg": "^8.13.3",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.8.1",
     "ts-node-dev": "^2.0.0",
