--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "start": "node dist/server/src/server.js"
+    "start": "node dist/src/server.js"
   },
   "keywords": [],
   "author": "",
