--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/simple-peer": "^9.11.8",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "dotenv": "^16.5.0",
     "fastify": "^4.28.1",
     "fastify-cors": "^6.0.3",
     "fastify-socket.io": "^5.1.0",
