--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.14",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/styled-components": "^5.1.34",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "concurrently": "^9.1.0",
     "eslint": "^9.14.0",
