--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,12 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@types/socket.io": "^3.0.1"
+    "@types/socket.io": "^3.0.1",
+    "drizzle-kit": "^0.31.4"
+  },
+  "drizzle-kit": {
+    "schema": "./schema.ts",
+    "out": "./drizzle",
+    "driver": "pg"
   }
 }
